# coreclr-module-runtime

./: .gitignore  .gitmodules
.github/workflows/: build.yml
c-api/: altv.cpp  altv.h  audio_category.cpp  audio_category.h  client.h  config.cpp  config.h  connection_info.cpp  connection_info.h  core.cpp  core.h  event.cpp  event.h  func_table.cpp  func_table.h  handling_data.cpp  handling_data.h  localstorage.cpp  localstorage.h  map_data.cpp  map_data.h  mvalue.cpp  mvalue.h  object.cpp  object.h  resource.cpp  resource.h  weaponData.cpp  weaponData.h
c-api/cache/: CachedBaseObject.h  CachedEntity.h  CachedNetworkObject.h  CachedObject.h  CachedPed.h  CachedPlayer.h  CachedVehicle.h  CachedWorldObject.h
c-api/data/: ammo_flags.h  bone_info.h  config_node_data.h  decoration.h  discord_user.h  function_table.h  invoker.h  metric.cpp  metric.h  ped_model_info.h  sync_info.h  types.h  vehicle_model_info.h  weapon_model_info.h
c-api/entities/: audio.cpp  audio.h  audioFilter.cpp  audioFilter.h  audio_attached_output.cpp  audio_attached_output.h  audio_frontend_output.cpp  audio_frontend_output.h  audio_output.cpp  audio_output.h  audio_world_output.cpp  audio_world_output.h  baseObject.cpp  baseObject.h  blip.h  (+63 more)
client/: CMakeLists.txt  build.bat
client/src/: main.cpp  utils.h
client/src/coreclr/: CoreClr.cpp  CoreClr.h  CoreClrUtils.cpp  CoreClrValidation.cpp
client/src/nuget/: NuGet.cpp  NuGet.h
client/src/runtime/: CSharpResourceImpl.cpp  CSharpResourceImpl.h  CSharpScriptRuntime.cpp  CSharpScriptRuntime.h  eventDelegates.h  natives.cpp  natives.h
server/: CMakeLists.txt
(+16 files in other folders)
